[package]
name = "patchgl"
version = "0.1.0"
authors = ["Jeffrey Yu <wehjin@gmail.com>"]

[dependencies]
glium = "*"
xml-rs = "0.3"
cage = { git = "https://github.com/wehjin/rust-cage" }
rusttype = "0.2.1"
unicode-normalization = "^0.1.2"
arrayvec = "^0.3.13"

[lib]
name = "patchgllib"
path = "src/lib.rs"

[[bin]]
name = "patchgl"
path = "src/main.rs"
